# accml

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  README.md  design.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/background/: design.doctree  implementation.doctree
.doctrees/src/: accml.app.doctree  accml.app.tune.bluesky.doctree  accml.app.tune.doctree  accml.core.config.doctree  accml.core.doctree  accml.core.utils.doctree  accml.core.utils.ophyd_async.doctree  accml.custom.bluesky.doctree  accml.custom.doctree  accml.custom.epics.devices.doctree  accml.custom.epics.doctree  accml.custom.ophyd_async.doctree  accml.custom.simulators.doctree  accml.doctree  accml.work_bench.app.doctree  accml.work_bench.core.doctree  accml.work_bench.custom.doctree  accml.work_bench.doctree  accml.work_bench.lib_.custom.doctree  accml.work_bench.lib_.doctree  modules.doctree
.github/: copilot-instructions.md
.github/workflows/: accml-ci.yml  docs.yml  pypi-publish.yml
_modules/: index.html
_sources/background/: implementation.rst.txt
_sources/src/: accml.app.rst.txt  accml.app.tune.bluesky.rst.txt  accml.app.tune.rst.txt  accml.core.config.rst.txt  accml.core.rst.txt  accml.core.utils.ophyd_async.rst.txt  accml.core.utils.rst.txt  accml.custom.bluesky.rst.txt  accml.custom.epics.devices.rst.txt  accml.custom.epics.rst.txt  accml.custom.ophyd_async.rst.txt  accml.custom.rst.txt  accml.custom.simulators.rst.txt  accml.rst.txt  accml.work_bench.app.rst.txt  accml.work_bench.core.rst.txt  accml.work_bench.custom.rst.txt  accml.work_bench.lib_.custom.rst.txt  accml.work_bench.lib_.rst.txt  accml.work_bench.rst.txt  modules.rst.txt
background/: design.html  implementation.html
docs/: conf.py  index.rst  refs.bib
docs/background/: design.rst
examples/01_simulation/: tune_correction_on_simulator.py  tune_response_on_simulator.py
examples/02_analysis/: tune_response_analysis.py
examples/03_reference_data/: 00README.md  bessy2_storage_ring_reflat.json
examples/04_measurement_simulation_data/: 00README.md
examples/05_reference_data/: tune_response_data_from_simulator.json
examples/tune/: tune.py  (+9 more)
src/: accml.app.html  accml.app.tune.bluesky.html  accml.app.tune.html  accml.core.config.html  accml.core.html  accml.core.utils.html  accml.core.utils.ophyd_async.html  accml.custom.bluesky.html  accml.custom.epics.devices.html  accml.custom.epics.html  accml.custom.html  accml.custom.ophyd_async.html  accml.custom.simulators.html  accml.html  accml.work_bench.app.html  accml.work_bench.core.html  accml.work_bench.custom.html  accml.work_bench.html  accml.work_bench.lib_.custom.html  accml.work_bench.lib_.html  modules.html
tests/: test_RE.py  test_bluesky_measurement_execution_engine.py  test_data_integrity.py  test_json_compatible_device_id.py  test_liasion_translator_setup.py  test_mexec.py  test_signal.py  test_tango_pc.py
(+204 files in other folders)
