[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[project]
name = "accml"
version = "0.1.0a1"
description = "python accelerator middle layer"
authors = [
     {name = "Waheedullah Sulaiman Khail", email = "<waheedullah.sulaiman_khail@helmholtz-berlin.de"},
     {name = "Pierre Schnizer", email = "<pierre.schnizer@helmholtz-berlin.de"},
]
license = "GPL-3.0"
# until we have the repoitory
homepage = "https://github.com/python-accelerator-middle-layer/accml"
documentation = "https://github.com/python-accelerator-middle-layer/accml"
repository = "https://github.com/python-accelerator-middle-layer/accml.git"
keywords = []

[tool.poetry]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pydantic = "*"
jsons = "*"
# Packages below here are to be revisited if we need to depend on them (they are mostly custom packages
databroker = "<2.0"

# ophyd async does not specify which transport is to be used
ophyd-async = "*"
aioca = "*"
# move support routines for fit error calculation here
bact_math_utils = ">=0.1.1"